# slintdemo

./: .gitignore  AGENTS.md  Cargo.toml  README.md  howtobuild.txt
.cargo/: config.toml
.github/workflows/: ci.yml
.specify/memory/: constitution.md
frontend/: demo.html  index.html  manifest.json
frontend/src/: main.js
frontend/styles/: main.css
frontend/tests/e2e/: test_accessibility_playwright.spec.ts  test_catalog_playwright.spec.ts  test_code_playwright.spec.ts  test_demo_playwright.spec.ts  test_performance_playwright.spec.ts
rust-wasm-mental-poker/: Cargo.toml  README.md
rust-wasm-mental-poker/examples/: node-sim.mjs
rust-wasm-mental-poker/src/: lib.rs  protocol.rs  types.rs  wasm_api.rs
specs/001-rust-web-hello/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rust-web-hello/checklists/: requirements.md
specs/001-rust-web-hello/contracts/: openapi.yaml
specs/004-slint-web-showcase/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-slint-web-showcase/checklists/: requirements.md
specs/004-slint-web-showcase/contracts/: README.md
src/: lib.rs  main.rs
src/lib/: Cargo.toml  lib.rs
src/lib/components/: app.slint  demo_button.slint  demo_checkbox.slint  demo_counter.slint  demo_slider.slint  demo_text.slint  demo_viewer.slint  mod.rs
src/lib/data/: benchmarks.rs  capability_demo.rs  category.rs  code_example.rs  demos.rs  keyboard.rs  mod.rs  performance_metric.rs  responsive.rs
src/lib/tests/: test_capability_selection.rs  test_catalog_data.rs  test_category_navigation.rs  test_code_editor.rs  test_code_examples.rs  test_code_preview.rs  test_comparison_charts.rs  test_demo_components.rs  test_demo_interaction.rs  test_demo_navigation.rs  test_keyboard_navigation.rs  test_performance_data.rs  test_performance_display.rs  test_responsive_components.rs  test_responsive_layout.rs
src/wasm/: glue.js
tests/: test_hello.rs
