[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A simple Hello World web service"
repository = "https://github.com/anomalyco/slintdemo"
keywords = ["actix", "web", "http", "server"]
categories = ["web-programming::http-server"]

[lib]
name = "hello_world"
path = "src/lib.rs"

[dependencies]
actix-web = "4"
env_logger = "0.11"
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
