[package]
name = "rust-wasm-mental-poker"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wasm"]
wasm = ["getrandom/js"]

[dependencies]
ziffle = "0.1"
ark-std = "0.5"
rand_core = "0.6"
getrandom = "0.2"
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
ark-serialize = "0.5"

[dev-dependencies]
hex = "0.4"
