[package]
name = "slint-showcase-lib"
version = "0.1.0"
edition = "2021"
authors = ["Slint Demo"]

[dependencies]
slint = "1.14"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
lto = true
