[package]
name = "slint-showcase-lib"
version = "0.1.0"
edition = "2021"
authors = ["Slint Demo"]

[lib]
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
slint = "1.14"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = "z"
lto = true
